; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_flow_divert.c_flow_divert_find_proc_by_uuid.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_flow_divert.c_flow_divert_find_proc_by_uuid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }
%struct.uuid_search_info = type { i32, i32 }

@LOG_INFO = common dso_local global i64 0, align 8
@nil_pcb = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@.str = private unnamed_addr constant [33 x i8] c"Looking for process with UUID %s\00", align 1
@PROC_NULL = common dso_local global i32 0, align 4
@PROC_ALLPROCLIST = common dso_local global i32 0, align 4
@flow_divert_find_proc_by_uuid_callout = common dso_local global i32 0, align 4
@flow_divert_find_proc_by_uuid_filter = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @flow_divert_find_proc_by_uuid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @flow_divert_find_proc_by_uuid(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.uuid_search_info, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i64, i64* @LOG_INFO, align 8
  %6 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @nil_pcb, i32 0, i32 0), align 8
  %7 = icmp sle i64 %5, %6
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @uuid_unparse(i32 %9, i32 %10)
  %12 = load i64, i64* @LOG_INFO, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @FDLOG(i64 %12, %struct.TYPE_3__* @nil_pcb, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %13)
  br label %15

15:                                               ; preds = %8, %1
  %16 = call i32 @memset(%struct.uuid_search_info* %3, i32 0, i32 8)
  %17 = load i32, i32* @PROC_NULL, align 4
  %18 = getelementptr inbounds %struct.uuid_search_info, %struct.uuid_search_info* %3, i32 0, i32 0
  store i32 %17, i32* %18, align 4
  %19 = getelementptr inbounds %struct.uuid_search_info, %struct.uuid_search_info* %3, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* %2, align 4
  %22 = call i32 @uuid_copy(i32 %20, i32 %21)
  %23 = load i32, i32* @PROC_ALLPROCLIST, align 4
  %24 = load i32, i32* @flow_divert_find_proc_by_uuid_callout, align 4
  %25 = load i32, i32* @flow_divert_find_proc_by_uuid_filter, align 4
  %26 = call i32 @proc_iterate(i32 %23, i32 %24, %struct.uuid_search_info* %3, i32 %25, %struct.uuid_search_info* %3)
  %27 = getelementptr inbounds %struct.uuid_search_info, %struct.uuid_search_info* %3, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  ret i32 %28
}

declare dso_local i32 @uuid_unparse(i32, i32) #1

declare dso_local i32 @FDLOG(i64, %struct.TYPE_3__*, i8*, i32) #1

declare dso_local i32 @memset(%struct.uuid_search_info*, i32, i32) #1

declare dso_local i32 @uuid_copy(i32, i32) #1

declare dso_local i32 @proc_iterate(i32, i32, %struct.uuid_search_info*, i32, %struct.uuid_search_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
